<resources>
    <string name="app_name">Converter</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="value">VALUE:</string>
    <string name="currency_converter">CURRENCY CONVERTER</string>
    <string name="convert">CONVERT</string>
    <string-array name="currency">
        <item>USD</item>
        <item>RUB</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
    <string name="Error"></string>
</resources>