<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#C6C6C6"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/t1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter"
            android:textColor="#252525"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainm"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:text="@string/value"
            android:background="@drawable/mainb"
            android:textColor="#252525"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/e"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:background="@drawable/entryb"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/form1"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/from"
            android:background="@drawable/mainb"
            android:layout_marginRight="20dp"
            android:textColor="#252525"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/s1"
            android:layout_width="85dp"
            android:background="@drawable/spinner"
            android:layout_height="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/form2"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/to"
            android:textColor="#252525"
            android:layout_marginRight="20dp"
            android:background="@drawable/mainb"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/s2"
            android:layout_width="85dp"
            android:background="@drawable/spinner"
            android:layout_height="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/mainb"
            android:text="@string/convert"
            android:textColor="#252525"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/res"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:background="@drawable/mainb"
            android:text=""
            android:textColor="#252525"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>